deploy/cicd/tekton/wf--e89c4717-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  creationTimestamp: null
  labels:
    move2kube.konveyor.io/service: wf--e89c4717
  name: wf--e89c4717
spec:
  rules:
    - host: localhost
      http:
        paths:
          - backend:
              service:
                name: el-wf--e89c4717-git-repo
                port:
                  name: port-8080
            path: /el-wf--e89c4717-git-repo
            pathType: Prefix
status:
  loadBalancer: {}
